Remove authentication logic (JWT)